--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QuoteSpark - Combined Generator</title>
 
-    <!-- Google Fonts -->
+    <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Poppins&display=swap"
         rel="stylesheet">
 
@@ -15,7 +15,6 @@
         integrity="sha512-u8C4vp96rlGK2kLrocSgTr5s0dY+x7P5wTnldttFT7ZLk7ebUXLhR8v0eDk38Wz/jp13pReD+7C5vjfzGXzN0Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- Custom Styles -->
     <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -39,7 +38,7 @@
         <input type="radio" id="tab-2" name="tab-group">
         <label for="tab-2">Advanced Generator</label>
 
-        <!-- Random Generator Content -->
+        <!-- Random Generator -->
         <div class="tab-content" id="content-1">
             <section id="random-section" class="generator-section">
                 <h2>Random Quote Generator</h2>
@@ -87,13 +86,13 @@
             </section>
         </div>
 
-        <!-- Advanced Generator Content -->
+        <!-- Advanced Generator -->
         <div class="tab-content" id="content-2">
             <section id="advanced-section" class="generator-section">
                 <h2>Advanced Quote Generator</h2>
                 <div class="generator-container">
                     <form id="adv-quote-form">
-                    
+
                         <div class="form-group">
                             <label for="adv-topic">Select Quote Topic</label>
                             <select id="adv-topic">
@@ -132,14 +131,12 @@
                     </form>
 
                     <div id="adv-results" class="results">
-                        <!-- Advanced quotes will appear here -->
                     </div>
                 </div>
             </section>
         </div>
     </div>
 
-    <!-- Script -->
     <script src="script.js"></script>
 </body>
 
